samples/_failures_safe/1761458602_6730ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1bffaa3.c: In function ‘main’:
./samples/SAFE/__tmp_f1bffaa3.c:194:17: error: expected declaration or statement at end of input
  194 |                 printf("Invalid data value\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_f1bffaa3.c:194:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1bffaa3.c:194:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1bffaa3.c:194:17: error: expected declaration or statement at end of input
